[package]
name = "herzog"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance, Rust-based containerization tool compatible with Docker workflows"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core functionality
nix = "0.26.2"  # For low-level Unix API bindings
libc = "0.2.146"  # For C types and functions

# CLI interface
clap = { version = "4.3.3", features = ["derive"] }  # For building CLI applications

# Asynchronous runtime and networking
tokio = { version = "1.28.2", features = ["full"] }  # Asynchronous runtime
hyper = { version = "0.14.26", features = ["full"] }  # HTTP client and server

# Serialization and deserialization
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"

# HTTP client for registry interactions
reqwest = { version = "0.11.18", features = ["json"] }

# Error handling
anyhow = "1.0.71"  # For easy error handling
thiserror = "1.0.40"  # For defining custom error types

# Logging
log = "0.4.19"
env_logger = "0.10.0"

# Security
seccomp = "0.1.2"  # For syscall filtering

# File system operations
walkdir = "2.3.3"  # For recursive directory operations

# Compression (for image layers)
flate2 = "1.0.26"  # For gzip compression/decompression
tar = "0.4.38"  # For working with tar archives

# Concurrency
rayon = "1.7.0"  # For parallel iterators and data processing

# Configuration parsing
toml = "0.7.4"  # For parsing TOML configuration files (like docker-compose.yml equivalents)

# Optional: for future extensibility
libloading = "0.8.0"  # For dynamic loading of shared libraries (plugin system)

[dev-dependencies]
tempfile = "3.6.0"  # For creating temporary directories in tests
assert_cmd = "2.0.11"  # For testing CLI applications
predicates = "3.0.3"  # For creating assertions in tests

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"